--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
     // https://mvnrepository.com/artifact/org.apache.kafka/kafka
-    compile group: 'org.apache.kafka', name: 'kafka_2.10', version: '0.10.2.2'
+    implementation group: 'org.apache.kafka', name: 'kafka_2.10', version: '0.10.2.2'
 }
 
 test {
