--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,16 @@
+buildscript {
+    ext.kotlin_version = '1.4.21'
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 plugins {
     id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.21'
 }
 
 group 'org.fretron'
@@ -10,15 +21,20 @@ repositories {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-
     // https://mvnrepository.com/artifact/org.apache.kafka/kafka
-    compile group: 'org.apache.kafka', name: 'kafka_2.10', version: '0.10.2.2'
-
-    compile 'org.apache.avro:avro:1.10.1'
+    implementation group: 'org.apache.kafka', name: 'kafka_2.13', version: '2.6.0'
 }
 
 test {
     useJUnitPlatform()
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
